--- a/site/css/master.css
+++ b/site/css/master.css
@@ -235,6 +235,19 @@ ul.multicolumn li {
 	background-color: rgba(255, 223, 0, 0.3);
 	height: 1.5em;
 }
+
+/* Place list view */
+.place-item {
+	
+}
+
+.place-item-checkbox {
+	vertical-align: baseline;
+}
+
+.place-item-title {
+	margin-left: 5%;
+}
 /* =Footer
 -----------------------------------------------------------------------------*/
 #footer-sep {
