--- a/design/kube101/css/master.css
+++ b/design/kube101/css/master.css
@@ -11,7 +11,7 @@ body {
 /* =Layout
 -----------------------------------------------------------------------------*/
 #top-bar-wrapper, #page{
-    width: 940px;
+    width: 800px;
     margin: 0px auto;
 }
 @font-face {
@@ -98,6 +98,15 @@ footer{
     color:#c8c8c8;
     text-align: right;
     font-size: 10px;
+}
+
+.cart {
+    width: 100px;
+    height: 100px;
+    text-align: right;
+    float: right;
+    margin-top: 200px; 
+    background-color: red;
 }
 
 
