--- a/site/css/kube.css
+++ b/site/css/kube.css
@@ -873,7 +873,7 @@ input.input-search {
 .fourfifth,
 .fivesixth,
 .threequarter {
-  margin-left: 3.1914893617021276%;
+  margin-left: 1.5%;
   float: left;
   min-height: 1px;
 }
