Possible fix for two commit loss. Added order submission and cart clearing mechanisms.

--- a/site/css/master.css
+++ b/site/css/master.css
@@ -273,10 +273,15 @@ ul.multicolumn li {
     margin-bottom: 1em;
 }
 
-/** Item view */
+/** Place item view */
 .place-item-add-button, .place-item-add-ident {
     display: block;
     margin-left: 5%;
+}
+
+/** Purchase item view */
+.product-image {
+    max-width: 270px;
 }
 /* =Footer
 -----------------------------------------------------------------------------*/
