add, edit, delete worker manager user

--- a/site/css/master.css
+++ b/site/css/master.css
@@ -278,6 +278,26 @@ ul.multicolumn li {
     display: block;
     margin-left: 5%;
 }
+
+.delete{
+    float: right;
+    display: block;
+    text-decoration: none;
+    color:#db0000;
+}
+.delete:hover.button{
+color:#0066CC;
+}
+
+.change{
+float: right;
+display: block;
+    text-decoration: none;
+    color:#169112;
+}
+.change:hover.button{
+color:#0066CC;
+}
 /* =Footer
 -----------------------------------------------------------------------------*/
 #footer-sep {
