Worker can now see and accept orders.
One way order status changing for worker added.
User may change order status via javascript and
save it to database automatically.

--- a/site/css/master.css
+++ b/site/css/master.css
@@ -241,8 +241,6 @@ ul.multicolumn li {
 
 /* Place list view */
 .place-item {
-
-
 }
 
 .place-item-checkbox {
@@ -313,6 +311,12 @@ ul.multicolumn li {
 }
 .text-right {
     text-align: right;
+}
+.default-cursor {
+    cursor: initial;
+}
+.status-select-wait {
+    display: none;
 }
 /* =Footer
 -----------------------------------------------------------------------------*/
