Manager can administer other users
Main manager panel and user statuses changing page added.

--- a/site/css/master.css
+++ b/site/css/master.css
@@ -318,6 +318,9 @@ ul.multicolumn li {
 .status-select-wait {
     display: none;
 }
+.hidden{
+    display: none;
+}
 /* =Footer
 -----------------------------------------------------------------------------*/
 #footer-sep {
